Fix for collapsing width

--- a/src/action/action.component.scss
+++ b/src/action/action.component.scss
@@ -2,6 +2,8 @@
   display: grid;
   grid-gap: 16px;
   margin: 16px;
+  // As of Chrome 94(?) this is necessary to prevent the width from collapsing
+  width: 532px;
 }
 
 .url {
